--- a/app/src/main/res/drawable/ic_wallet.xml
+++ b/app/src/main/res/drawable/ic_wallet.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <!-- Simple wallet icon -->
+    <!-- Credit card style wallet icon -->
     <path
         android:fillColor="#FF000000"
-        android:pathData="M21,7h-1V6c0,-1.1 -0.9,-2 -2,-2H6C4.9,4 4,4.9 4,6v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V9c0,-1.1 -0.9,-2 -2,-2zM7,8h10v2H7V8zM19,17H6V6h11v2h1v9zM17,12.5c0,-0.83 -0.67,-1.5 -1.5,-1.5S14,11.67 14,12.5 14.67,14 15.5,14 17,13.33 17,12.5z"/>
+        android:pathData="M20,4H4C2.89,4 2.01,4.89 2.01,6L2,18c0,1.11 0.89,2 2,2h16c1.11,0 2,-0.89 2,-2V6c0,-1.11 -0.89,-2 -2,-2zM20,18H4v-6h16v6zM20,8H4V6h16v2z"/>
 </vector>
