--- a/app/src/main/res/drawable/pin_dot_empty.xml
+++ b/app/src/main/res/drawable/pin_dot_empty.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E0E0E0" />
+    <solid android:color="@color/surface_secondary" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/border_light" />
     <size
-        android:width="16dp"
-        android:height="16dp" />
+        android:width="18dp"
+        android:height="18dp" />
 </shape>
