--- a/app/src/main/res/drawable/pin_dot_filled.xml
+++ b/app/src/main/res/drawable/pin_dot_filled.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#1e3a8a" />
+    <solid android:color="#22C55E" />
     <size
-        android:width="16dp"
-        android:height="16dp" />
+        android:width="18dp"
+        android:height="18dp" />
 </shape>
